// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`com.mgmtp.a12.widgets.button-group-container > rendering-button-group-container 1`] = `
.c11 {
  box-sizing: border-box;
  color: rgb(127, 140, 155);
  display: inline-block;
  direction: ltr;
  font-family: "Material Symbols Outlined";
  font-variation-settings: "FILL" 1, "wght" 400, "GRAD" 0, "opsz" 24;
  font-size: 1rem;
  font-style: normal;
  font-weight: 400;
  letter-spacing: normal;
  line-height: 1;
  text-transform: none;
  white-space: nowrap;
  overflow-wrap: normal;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizelegibility;
  font-feature-settings: "liga";
}

.c11 > span {
  display: inline-block;
}

.c11.c11 {
  max-width: unset;
}

.c3 {
  align-items: center;
  cursor: pointer;
  display: inline-flex;
  justify-content: center;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 700;
  gap: 4px;
  outline: none;
  text-transform: uppercase;
  min-height: 32px;
  vertical-align: middle;
  border: 2px solid transparent;
  border-radius: 0px;
  padding: 0px 8px;
  position: relative;
  background: transparent;
  color: rgb(5, 104, 174);
}

.c3 .c10 {
  user-select: none;
}

.c3 .c10 {
  color: inherit;
}

.c3:not(:disabled):focus {
  outline: rgb(51, 51, 51) dotted 1px;
  background-color: rgb(255, 255, 255);
  box-shadow: none;
  color: rgb(213, 0, 117);
  text-decoration: none;
  border: 2px solid rgb(213, 0, 117);
}

.h_inlineBlock.h_middleAlign .c3.c3 {
  display: block;
  height: auto;
  min-height: 0px;
}

.h_inlineBlock.h_middleAlign .c3.c3 > .c10 {
  display: block;
}

.c5 {
  align-items: center;
  border: 2px solid transparent;
  cursor: pointer;
  display: inline-flex;
  justify-content: center;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 700;
  gap: 4px;
  outline: none;
  position: relative;
  text-transform: uppercase;
  min-height: 32px;
  vertical-align: middle;
  border-radius: 2px;
  box-shadow: rgba(22, 25, 29, 0.4) 0px 1px 2px 0px;
  padding: 0px 32px;
  background: rgb(41, 122, 36);
  color: rgb(255, 255, 255);
}

.c5 .c10 {
  user-select: none;
}

.c5 .c10 {
  color: inherit;
}

.c5:not(:disabled):focus {
  outline: rgb(51, 51, 51) dotted 1px;
  background-color: rgb(255, 255, 255);
  box-shadow: none;
  color: rgb(213, 0, 117);
  text-decoration: none;
  border: 2px solid rgb(213, 0, 117);
}

.h_inlineBlock.h_middleAlign .c5.c5 {
  display: block;
  height: auto;
  min-height: 0px;
}

.h_inlineBlock.h_middleAlign .c5.c5 > .c10 {
  display: block;
}

.c8 {
  align-items: center;
  border: 2px solid transparent;
  cursor: pointer;
  display: inline-flex;
  justify-content: center;
  font-family: "Open Sans", sans-serif;
  font-weight: 700;
  gap: 4px;
  outline: none;
  position: relative;
  text-transform: uppercase;
  vertical-align: middle;
  flex-shrink: 0;
  font-size: 1.125rem;
  height: 2rem;
  min-height: 0px;
  padding: 0px;
  width: 2rem;
  border-radius: 50%;
  box-shadow: none;
  background: rgb(41, 122, 36);
  color: rgb(255, 255, 255);
}

.c8 .c10 {
  user-select: none;
}

.c8 .c10 {
  color: inherit;
}

.c8 .c10 {
  font-size: inherit;
}

.c8:not(:disabled):focus {
  outline: rgb(51, 51, 51) dotted 1px;
  background-color: transparent;
  box-shadow: none;
  color: rgb(213, 0, 117);
  border: 2px solid rgb(213, 0, 117);
}

.c8:not(:disabled):focus {
  background-color: rgb(255, 255, 255);
  box-shadow: none;
  color: rgb(213, 0, 117);
  border: 2px solid rgb(213, 0, 117);
}

.h_inlineBlock.h_middleAlign .c8.c8 {
  display: block;
  height: auto;
  min-height: 0px;
}

.h_inlineBlock.h_middleAlign .c8.c8 > .c10 {
  display: block;
}

.c12 {
  align-items: center;
  display: inline-flex;
  justify-content: center;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 700;
  gap: 4px;
  outline: none;
  text-transform: uppercase;
  min-height: 32px;
  vertical-align: middle;
  border: 2px solid transparent;
  border-radius: 0px;
  padding: 0px 8px;
  position: relative;
  background: transparent;
  box-shadow: none;
  color: rgb(169, 179, 188);
  cursor: default;
}

.c12 .c10 {
  user-select: none;
}

.c12 .c10 {
  color: inherit;
}

.c12.c12 .c10 {
  color: inherit;
}

.h_inlineBlock.h_middleAlign .c12.c12 {
  display: block;
  height: auto;
  min-height: 0px;
}

.h_inlineBlock.h_middleAlign .c12.c12 > .c10 {
  display: block;
}

.c1 {
  align-items: center;
  display: flex;
  flex-wrap: wrap;
  gap: 8px;
  order: -1;
}

.c7 {
  display: inline-block;
  font-size: 0px;
  -webkit-tap-highlight-color: transparent;
}

.c7 .c10 {
  position: relative;
}

.c7 .c10::before {
  inset: 0px;
  position: absolute;
}

.c7 .c10:focus {
  outline: none;
}

.c7 .c10:focus::before {
  content: "";
  outline: rgb(51, 51, 51) dotted 1px;
}

.c4 {
  border-radius: 2px;
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  box-shadow: rgba(22, 25, 29, 0.4) 0px 1px 2px 0px;
  display: flex;
  isolation: isolate;
}

.c4 .c2 {
  border-radius: 2px;
  box-shadow: none;
  position: relative;
}

.c4 > .c2 {
  margin: 0px;
  min-width: 40px;
  border-top-right-radius: 0px;
  border-bottom-right-radius: 0px;
}

.c9 {
  font-size: 1.25rem;
}

.c9 .c10 {
  font-size: inherit;
}

.c9.c9 {
  border-top-left-radius: 0px;
  border-bottom-left-radius: 0px;
}

.c6 {
  align-items: stretch;
  width: 2px;
  background-color: rgb(41, 122, 36);
  opacity: 0.2;
}

.c0 {
  display: flex;
  flex-grow: 1;
  max-width: 100%;
  gap: 8px;
}

@media (pointer: coarse) {
  .c3:not(:disabled):active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    background-color: rgb(255, 255, 255);
    box-shadow: none;
    color: rgb(213, 0, 117);
    text-decoration: none;
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: fine) {
  .c3:not(:disabled):hover {
    background-color: rgb(255, 255, 255);
    box-shadow: none;
    color: rgb(213, 0, 117);
    text-decoration: none;
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: fine) {
  .c3:hover {
    outline: transparent solid 1px;
  }
}

@media (pointer: coarse) {
  .c5:not(:disabled):active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    background-color: rgb(255, 255, 255);
    box-shadow: none;
    color: rgb(213, 0, 117);
    text-decoration: none;
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: fine) {
  .c5:not(:disabled):hover {
    background-color: rgb(255, 255, 255);
    box-shadow: none;
    color: rgb(213, 0, 117);
    text-decoration: none;
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: fine) {
  .c5:hover {
    outline: transparent solid 1px;
  }
}

@media (pointer: coarse) {
  .c8:not(:disabled):active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    background-color: transparent;
    box-shadow: none;
    color: rgb(213, 0, 117);
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: fine) {
  .c8:not(:disabled):hover {
    background-color: transparent;
    box-shadow: none;
    color: rgb(213, 0, 117);
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: fine) {
  .c8:hover {
    outline: transparent solid 1px;
  }
}

@media (pointer: coarse) {
  .c8:not(:disabled):active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    background-color: rgb(255, 255, 255);
    box-shadow: none;
    color: rgb(213, 0, 117);
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: fine) {
  .c8:not(:disabled):hover {
    background-color: rgb(255, 255, 255);
    box-shadow: none;
    color: rgb(213, 0, 117);
    border: 2px solid rgb(213, 0, 117);
  }
}

<div
  class="c0 button-group-container test-class"
  data-role="button-group-container"
  id="test-id"
  style="color: yellow;"
>
  <div
    class="c1 button-group h_floatLeft button-group--left left"
    data-role="button-group"
    id="left-id"
    style="color: hotpink;"
  >
    <button
      class="c2 c3 button button--secondary"
      data-role="button"
      title=""
      type="button"
    >
      <span
        data-role="button-label"
      >
        Left 1
      </span>
    </button>
    <div
      class="c4 quick-access-button quick-access-button--primary"
      data-role="quick-access-button"
      id="left-2"
    >
      <button
        class="c2 c5 button button--primary"
        data-role="quick-access-button-main-action"
        data-variant-type="primary"
        id="left-2-main-action"
        tabindex="0"
        title=""
        type="button"
      >
        <span
          data-role="quick-access-button-main-action-label"
        >
          Left 2
        </span>
      </button>
      <div
        class="c6 quick-access-button__divider"
        data-role="quick-access-button-divider"
      />
      <div
        class="c7 popup quick-access-button__popup"
        data-role="quick-access-button-popup"
      >
        <button
          aria-expanded="false"
          aria-haspopup="true"
          aria-label="Open further options"
          class="c2 c8 button button--icon button--primary c9"
          data-role="quick-access-button-trigger-element"
          data-type="icon"
          data-variant-type="primary"
          tabindex="0"
          title="Open further options"
          type="button"
        >
          <i
            class="c10 c11 plasma-icon"
            data-role="plasma-icon"
          >
            <span
              aria-hidden="true"
            >
              arrow_drop_down
            </span>
          </i>
        </button>
      </div>
    </div>
    <button
      class="c2 c12 button button--secondary"
      data-role="button"
      disabled=""
      title=""
      type="button"
    >
      <span
        data-role="button-label"
      >
        Left 3
      </span>
    </button>
  </div>
</div>
`;

exports[`com.mgmtp.a12.widgets.button-group-container > rendering-responsive-button-group-container 1`] = `
.c13 {
  box-sizing: border-box;
  color: rgb(127, 140, 155);
  display: inline-block;
  direction: ltr;
  font-family: "Material Symbols Outlined";
  font-variation-settings: "FILL" 1, "wght" 400, "GRAD" 0, "opsz" 24;
  font-size: 1rem;
  font-style: normal;
  font-weight: 400;
  letter-spacing: normal;
  line-height: 1;
  text-transform: none;
  white-space: nowrap;
  overflow-wrap: normal;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizelegibility;
  font-feature-settings: "liga";
}

.c13 > span {
  display: inline-block;
}

.c13.c13 {
  max-width: unset;
}

.c5 {
  align-items: center;
  cursor: pointer;
  display: inline-flex;
  justify-content: center;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 700;
  gap: 4px;
  outline: none;
  text-transform: uppercase;
  min-height: 32px;
  vertical-align: middle;
  border: 2px solid transparent;
  border-radius: 0px;
  padding: 0px 8px;
  position: relative;
  background: transparent;
  color: rgb(5, 104, 174);
}

.c5 .c12 {
  user-select: none;
}

.c5 .c12 {
  color: inherit;
}

.c5:not(:disabled):focus {
  outline: rgb(51, 51, 51) dotted 1px;
  background-color: rgb(255, 255, 255);
  box-shadow: none;
  color: rgb(213, 0, 117);
  text-decoration: none;
  border: 2px solid rgb(213, 0, 117);
}

.h_inlineBlock.h_middleAlign .c5.c5 {
  display: block;
  height: auto;
  min-height: 0px;
}

.h_inlineBlock.h_middleAlign .c5.c5 > .c12 {
  display: block;
}

.c7 {
  align-items: center;
  border: 2px solid transparent;
  cursor: pointer;
  display: inline-flex;
  justify-content: center;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 700;
  gap: 4px;
  outline: none;
  position: relative;
  text-transform: uppercase;
  min-height: 32px;
  vertical-align: middle;
  border-radius: 2px;
  box-shadow: rgba(22, 25, 29, 0.4) 0px 1px 2px 0px;
  padding: 0px 32px;
  background: rgb(41, 122, 36);
  color: rgb(255, 255, 255);
}

.c7 .c12 {
  user-select: none;
}

.c7 .c12 {
  color: inherit;
}

.c7:not(:disabled):focus {
  outline: rgb(51, 51, 51) dotted 1px;
  background-color: rgb(255, 255, 255);
  box-shadow: none;
  color: rgb(213, 0, 117);
  text-decoration: none;
  border: 2px solid rgb(213, 0, 117);
}

.h_inlineBlock.h_middleAlign .c7.c7 {
  display: block;
  height: auto;
  min-height: 0px;
}

.h_inlineBlock.h_middleAlign .c7.c7 > .c12 {
  display: block;
}

.c10 {
  align-items: center;
  border: 2px solid transparent;
  cursor: pointer;
  display: inline-flex;
  justify-content: center;
  font-family: "Open Sans", sans-serif;
  font-weight: 700;
  gap: 4px;
  outline: none;
  position: relative;
  text-transform: uppercase;
  vertical-align: middle;
  flex-shrink: 0;
  font-size: 1.125rem;
  height: 2rem;
  min-height: 0px;
  padding: 0px;
  width: 2rem;
  border-radius: 50%;
  box-shadow: none;
  background: rgb(41, 122, 36);
  color: rgb(255, 255, 255);
}

.c10 .c12 {
  user-select: none;
}

.c10 .c12 {
  color: inherit;
}

.c10 .c12 {
  font-size: inherit;
}

.c10:not(:disabled):focus {
  outline: rgb(51, 51, 51) dotted 1px;
  background-color: transparent;
  box-shadow: none;
  color: rgb(213, 0, 117);
  border: 2px solid rgb(213, 0, 117);
}

.c10:not(:disabled):focus {
  background-color: rgb(255, 255, 255);
  box-shadow: none;
  color: rgb(213, 0, 117);
  border: 2px solid rgb(213, 0, 117);
}

.h_inlineBlock.h_middleAlign .c10.c10 {
  display: block;
  height: auto;
  min-height: 0px;
}

.h_inlineBlock.h_middleAlign .c10.c10 > .c12 {
  display: block;
}

.c14 {
  align-items: center;
  display: inline-flex;
  justify-content: center;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 700;
  gap: 4px;
  outline: none;
  text-transform: uppercase;
  min-height: 32px;
  vertical-align: middle;
  border: 2px solid transparent;
  border-radius: 0px;
  padding: 0px 8px;
  position: relative;
  background: transparent;
  box-shadow: none;
  color: rgb(169, 179, 188);
  cursor: default;
}

.c14 .c12 {
  user-select: none;
}

.c14 .c12 {
  color: inherit;
}

.c14.c14 .c12 {
  color: inherit;
}

.h_inlineBlock.h_middleAlign .c14.c14 {
  display: block;
  height: auto;
  min-height: 0px;
}

.h_inlineBlock.h_middleAlign .c14.c14 > .c12 {
  display: block;
}

.c16 .c12 {
  user-select: none;
}

.c16 .c12 {
  color: inherit;
}

.c16 .c12 {
  font-size: inherit;
}

.h_inlineBlock.h_middleAlign .c16.c16 > .c12 {
  display: block;
}

.c3 {
  align-items: center;
  display: flex;
  flex-wrap: wrap;
  gap: 8px;
  order: -1;
}

.c15 {
  align-items: center;
  display: flex;
  flex-wrap: wrap;
  gap: 8px;
  order: 1;
  flex-grow: 1;
  justify-content: flex-end;
}

.c9 {
  display: inline-block;
  font-size: 0px;
  -webkit-tap-highlight-color: transparent;
}

.c9 .c12 {
  position: relative;
}

.c9 .c12::before {
  inset: 0px;
  position: absolute;
}

.c9 .c12:focus {
  outline: none;
}

.c9 .c12:focus::before {
  content: "";
  outline: rgb(51, 51, 51) dotted 1px;
}

.c6 {
  border-radius: 2px;
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  box-shadow: rgba(22, 25, 29, 0.4) 0px 1px 2px 0px;
  display: flex;
  isolation: isolate;
}

.c6 .c4 {
  border-radius: 2px;
  box-shadow: none;
  position: relative;
}

.c6 > .c4 {
  margin: 0px;
  min-width: 40px;
  border-top-right-radius: 0px;
  border-bottom-right-radius: 0px;
}

.c11 {
  font-size: 1.25rem;
}

.c11 .c12 {
  font-size: inherit;
}

.c11.c11 {
  border-top-left-radius: 0px;
  border-bottom-left-radius: 0px;
}

.c8 {
  align-items: stretch;
  width: 2px;
  background-color: rgb(41, 122, 36);
  opacity: 0.2;
}

.c0 {
  display: flex;
  flex-grow: 1;
  max-width: 100%;
  gap: 8px;
}

.c1 {
  flex-shrink: 1;
  flex-wrap: nowrap;
  min-width: 0px;
}

.c1 .c2 {
  flex-shrink: 0;
}

.c1 .c4 {
  white-space: nowrap;
}

@media (pointer: coarse) {
  .c5:not(:disabled):active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    background-color: rgb(255, 255, 255);
    box-shadow: none;
    color: rgb(213, 0, 117);
    text-decoration: none;
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: fine) {
  .c5:not(:disabled):hover {
    background-color: rgb(255, 255, 255);
    box-shadow: none;
    color: rgb(213, 0, 117);
    text-decoration: none;
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: fine) {
  .c5:hover {
    outline: transparent solid 1px;
  }
}

@media (pointer: coarse) {
  .c7:not(:disabled):active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    background-color: rgb(255, 255, 255);
    box-shadow: none;
    color: rgb(213, 0, 117);
    text-decoration: none;
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: fine) {
  .c7:not(:disabled):hover {
    background-color: rgb(255, 255, 255);
    box-shadow: none;
    color: rgb(213, 0, 117);
    text-decoration: none;
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: fine) {
  .c7:hover {
    outline: transparent solid 1px;
  }
}

@media (pointer: coarse) {
  .c10:not(:disabled):active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    background-color: transparent;
    box-shadow: none;
    color: rgb(213, 0, 117);
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: fine) {
  .c10:not(:disabled):hover {
    background-color: transparent;
    box-shadow: none;
    color: rgb(213, 0, 117);
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: fine) {
  .c10:hover {
    outline: transparent solid 1px;
  }
}

@media (pointer: coarse) {
  .c10:not(:disabled):active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    background-color: rgb(255, 255, 255);
    box-shadow: none;
    color: rgb(213, 0, 117);
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: fine) {
  .c10:not(:disabled):hover {
    background-color: rgb(255, 255, 255);
    box-shadow: none;
    color: rgb(213, 0, 117);
    border: 2px solid rgb(213, 0, 117);
  }
}

<div
  class="c0 c1 button-group-container button-group-container--responsive test-class"
  data-role="button-group-container"
  id="test-id"
  style="color: yellow;"
>
  <div
    class="c2 c3 button-group h_floatLeft button-group--left left"
    data-role="button-group"
    id="left-id"
    style="color: hotpink;"
  >
    <button
      class="c4 c5 button button--secondary"
      data-role="button"
      title=""
      type="button"
    >
      <span
        data-role="button-label"
      >
        Left 1
      </span>
    </button>
    <div
      class="c6 quick-access-button quick-access-button--primary"
      data-role="quick-access-button"
      id="left-2"
    >
      <button
        class="c4 c7 button button--primary"
        data-role="quick-access-button-main-action"
        data-variant-type="primary"
        id="left-2-main-action"
        tabindex="0"
        title=""
        type="button"
      >
        <span
          data-role="quick-access-button-main-action-label"
        >
          Left 2
        </span>
      </button>
      <div
        class="c8 quick-access-button__divider"
        data-role="quick-access-button-divider"
      />
      <div
        class="c9 popup quick-access-button__popup"
        data-role="quick-access-button-popup"
      >
        <button
          aria-expanded="false"
          aria-haspopup="true"
          aria-label="Open further options"
          class="c4 c10 button button--icon button--primary c11"
          data-role="quick-access-button-trigger-element"
          data-type="icon"
          data-variant-type="primary"
          tabindex="0"
          title="Open further options"
          type="button"
        >
          <i
            class="c12 c13 plasma-icon"
            data-role="plasma-icon"
          >
            <span
              aria-hidden="true"
            >
              arrow_drop_down
            </span>
          </i>
        </button>
      </div>
    </div>
    <button
      class="c4 c14 button button--secondary"
      data-role="button"
      disabled=""
      title=""
      type="button"
    >
      <span
        data-role="button-label"
      >
        Left 3
      </span>
    </button>
  </div>
  <div
    class="c2 c15 button-group h_floatRight button-group--right right"
    data-role="button-group"
    id="right-id"
    style="color: red;"
  >
    <button
      class="c4 c5 button button--secondary"
      data-role="button"
      title=""
      type="button"
    >
      <span
        data-role="button-label"
      >
        Right 1
      </span>
    </button>
    <div
      class="c6 quick-access-button quick-access-button--primary"
      data-role="quick-access-button"
      id="Right-2"
    >
      <button
        class="c4 c7 button button--primary"
        data-role="quick-access-button-main-action"
        data-variant-type="primary"
        id="right-2-main-action"
        tabindex="0"
        title=""
        type="button"
      >
        <span
          data-role="quick-access-button-main-action-label"
        >
          Right 2
        </span>
      </button>
      <div
        class="c8 quick-access-button__divider"
        data-role="quick-access-button-divider"
      />
      <div
        class="c9 popup quick-access-button__popup"
        data-role="quick-access-button-popup"
      >
        <button
          aria-expanded="false"
          aria-haspopup="true"
          aria-label="Open further options"
          class="c4 c10 button button--icon button--primary c11"
          data-role="quick-access-button-trigger-element"
          data-type="icon"
          data-variant-type="primary"
          tabindex="0"
          title="Open further options"
          type="button"
        >
          <i
            class="c12 c13 plasma-icon"
            data-role="plasma-icon"
          >
            <span
              aria-hidden="true"
            >
              arrow_drop_down
            </span>
          </i>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`com.mgmtp.a12.widgets.button-group-container > should render list menu in popup which keeping the semantic of buttons 1`] = `
.c8 {
  box-sizing: border-box;
  color: rgb(127, 140, 155);
  display: inline-block;
  direction: ltr;
  font-family: "Material Symbols Outlined";
  font-variation-settings: "FILL" 1, "wght" 400, "GRAD" 0, "opsz" 24;
  font-size: 1rem;
  font-style: normal;
  font-weight: 400;
  letter-spacing: normal;
  line-height: 1;
  text-transform: none;
  white-space: nowrap;
  overflow-wrap: normal;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizelegibility;
  font-feature-settings: "liga";
}

.c8 > span {
  display: inline-block;
}

.c8.c8 {
  max-width: unset;
}

.c25 .c7 {
  user-select: none;
}

.c25 .c7 {
  color: inherit;
}

.h_inlineBlock.h_middleAlign .c25.c25 > .c7 {
  display: block;
}

.c26 .c7 {
  user-select: none;
}

.c26 .c7 {
  color: inherit;
}

.h_inlineBlock.h_middleAlign .c26.c26 > .c7 {
  display: block;
}

.c27 .c7 {
  user-select: none;
}

.c27 .c7 {
  color: inherit;
}

.c27 .c7 {
  font-size: inherit;
}

.h_inlineBlock.h_middleAlign .c27.c27 > .c7 {
  display: block;
}

.c28 .c7 {
  user-select: none;
}

.c28 .c7 {
  color: inherit;
}

.c28.c28 .c7 {
  color: inherit;
}

.h_inlineBlock.h_middleAlign .c28.c28 > .c7 {
  display: block;
}

.c29 .c7 {
  user-select: none;
}

.c29 .c7 {
  color: inherit;
}

.c29 .c7 {
  font-size: inherit;
}

.h_inlineBlock.h_middleAlign .c29.c29 > .c7 {
  display: block;
}

.c30 .c7 {
  user-select: none;
}

.c30 .c7 {
  color: inherit;
}

.c30 .c7 {
  font-size: inherit;
}

.c30.c30 .c7 {
  color: inherit;
}

.h_inlineBlock.h_middleAlign .c30.c30 > .c7 {
  display: block;
}

.c31 .c7 {
  user-select: none;
}

.c31 .c7 {
  color: inherit;
}

.c31 .c7 {
  font-size: inherit;
}

.h_inlineBlock.h_middleAlign .c31.c31 > .c7 {
  display: block;
}

.c32 .c7 {
  user-select: none;
}

.c32 .c7 {
  color: inherit;
}

.c32 .c7 {
  font-size: inherit;
}

.h_inlineBlock.h_middleAlign .c32.c32 > .c7 {
  display: block;
}

.c33 .c7 {
  user-select: none;
}

.c33 .c7 {
  color: inherit;
}

.c33.c33 .c7 {
  color: inherit;
}

.h_inlineBlock.h_middleAlign .c33.c33 > .c7 {
  display: block;
}

.c34 .c7 {
  user-select: none;
}

.c34 .c7 {
  color: inherit;
}

.h_inlineBlock.h_middleAlign .c34.c34 > .c7 {
  display: block;
}

.c35 .c7 {
  user-select: none;
}

.c35 .c7 {
  color: inherit;
}

.h_inlineBlock.h_middleAlign .c35.c35 > .c7 {
  display: block;
}

.c36 .c7 {
  user-select: none;
}

.c36 .c7 {
  color: inherit;
}

.c36.c36 .c7 {
  color: inherit;
}

.h_inlineBlock.h_middleAlign .c36.c36 > .c7 {
  display: block;
}

.c37 .c7 {
  user-select: none;
}

.c37 .c7 {
  color: inherit;
}

.h_inlineBlock.h_middleAlign .c37.c37 > .c7 {
  display: block;
}

.c38 .c7 {
  user-select: none;
}

.c38 .c7 {
  color: inherit;
}

.h_inlineBlock.h_middleAlign .c38.c38 > .c7 {
  display: block;
}

.c39 .c7 {
  user-select: none;
}

.c39 .c7 {
  color: inherit;
}

.c39 .c7 {
  font-size: inherit;
}

.h_inlineBlock.h_middleAlign .c39.c39 > .c7 {
  display: block;
}

.c1 {
  background: rgb(255, 255, 255);
  font-family: "Open Sans", sans-serif;
  list-style-type: none;
  margin: 0px;
  padding: 0px;
}

.c3 {
  box-sizing: border-box;
  background-color: rgb(255, 255, 255);
  display: flex;
  flex-direction: column;
  position: relative;
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  cursor: default;
  color: rgb(169, 179, 188);
}

.c3:not(:last-child) {
  border-bottom: 1px solid rgb(255, 255, 255);
}

.c11 {
  box-sizing: border-box;
  background-color: rgb(255, 255, 255);
  color: rgb(77, 77, 77);
  cursor: pointer;
  display: flex;
  flex-direction: column;
  position: relative;
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
}

.c11:not(:last-child) {
  border-bottom: 1px solid rgb(255, 255, 255);
}

.c23 {
  box-sizing: border-box;
  background-color: rgb(255, 255, 255);
  color: rgb(77, 77, 77);
  cursor: pointer;
  display: flex;
  flex-direction: column;
  position: relative;
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
}

.c23:not(:last-child) {
  border-bottom: 2px solid rgb(211, 214, 220);
}

.c42 .c5 .c7 {
  font-size: 1.125rem;
}

.c42 .c9 {
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 700;
  text-transform: uppercase;
}

.c43 .c5 .c7 {
  font-size: 1.125rem;
}

.c43 .c9 {
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 700;
  text-transform: uppercase;
}

.c44 .c5 .c7 {
  font-size: 1.125rem;
}

.c44 .c9 {
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 700;
  text-transform: uppercase;
}

.c45 .c5 .c7 {
  font-size: 1.125rem;
}

.c45 .c9 {
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 700;
  text-transform: uppercase;
}

.c46 .c5 .c7 {
  font-size: 1.125rem;
}

.c46 .c9 {
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 700;
  text-transform: uppercase;
}

.c47 .c5 .c7 {
  font-size: 1.125rem;
}

.c47 .c9 {
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 700;
  text-transform: uppercase;
}

.c48 .c5 .c7 {
  font-size: 1.125rem;
}

.c48 .c9 {
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 700;
  text-transform: uppercase;
}

.c49 .c5 .c7 {
  font-size: 1.125rem;
}

.c49 .c9 {
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 700;
  text-transform: uppercase;
}

.c50 .c5 .c7 {
  font-size: 1.125rem;
}

.c50 .c9 {
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 700;
  text-transform: uppercase;
}

.c51 .c5 .c7 {
  font-size: 1.125rem;
}

.c51 .c9 {
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 700;
  text-transform: uppercase;
}

.c52 .c5 .c7 {
  font-size: 1.125rem;
}

.c52 .c9 {
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 700;
  text-transform: uppercase;
}

.c53 .c5 .c7 {
  font-size: 1.125rem;
}

.c53 .c9 {
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 700;
  text-transform: uppercase;
}

.c4 {
  align-items: center;
  box-sizing: border-box;
  display: flex;
  flex-grow: 1;
  justify-content: flex-start;
  gap: 4px;
  min-height: 48px;
  outline: 0px;
  padding: 8px 16px;
  background: transparent;
  box-shadow: none;
  color: rgb(169, 179, 188);
  cursor: default;
}

.c4::before {
  content: "";
  inset: 0px;
  position: absolute;
  display: block;
}

.c4 .c7 {
  user-select: none;
}

.c4:focus::before {
  outline: rgb(51, 51, 51) dotted 1px;
}

.c4:not(:disabled):hover,
.c4:not(:disabled):active,
.c4:not(:disabled):focus {
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  outline: none;
}

.c4 .c5 .c7 {
  font-size: 1.125rem;
}

.c4 .c9 {
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 700;
  text-transform: uppercase;
}

.c12 {
  align-items: center;
  box-sizing: border-box;
  display: flex;
  flex-grow: 1;
  justify-content: flex-start;
  gap: 4px;
  min-height: 48px;
  outline: 0px;
  padding: 8px 16px;
  background: transparent;
  color: rgb(181, 76, 23);
}

.c12::before {
  content: "";
  inset: 0px;
  position: absolute;
  display: block;
}

.c12 .c7 {
  user-select: none;
}

.c12:focus::before {
  border: 2px solid rgb(213, 0, 117);
  margin: 1px;
  outline: rgb(51, 51, 51) dotted 1px;
}

.c12:not(:disabled):focus {
  outline: rgb(51, 51, 51) dotted 1px;
  background-color: transparent;
  box-shadow: none;
  color: rgb(213, 0, 117);
  border: 2px solid rgb(213, 0, 117);
}

.c12:not(:disabled):focus {
  background-color: transparent;
  box-shadow: none;
  color: rgb(213, 0, 117);
  border: 2px solid rgb(213, 0, 117);
}

.c12:not(:disabled):hover,
.c12:not(:disabled):active,
.c12:not(:disabled):focus {
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  outline: none;
}

.c12 .c5 .c7 {
  font-size: 1.125rem;
}

.c12 .c9 {
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 700;
  text-transform: uppercase;
}

.c14 {
  align-items: center;
  box-sizing: border-box;
  display: flex;
  flex-grow: 1;
  justify-content: flex-start;
  gap: 4px;
  min-height: 48px;
  outline: 0px;
  padding: 8px 16px;
  background: transparent;
  color: rgb(201, 29, 29);
}

.c14::before {
  content: "";
  inset: 0px;
  position: absolute;
  display: block;
}

.c14 .c7 {
  user-select: none;
}

.c14:focus::before {
  border: 2px solid rgb(213, 0, 117);
  margin: 1px;
  outline: rgb(51, 51, 51) dotted 1px;
}

.c14:not(:disabled):focus {
  outline: rgb(51, 51, 51) dotted 1px;
  background-color: transparent;
  box-shadow: none;
  color: rgb(213, 0, 117);
  border: 2px solid rgb(213, 0, 117);
}

.c14:not(:disabled):focus {
  background-color: transparent;
  box-shadow: none;
  color: rgb(213, 0, 117);
  border: 2px solid rgb(213, 0, 117);
}

.c14:not(:disabled):hover,
.c14:not(:disabled):active,
.c14:not(:disabled):focus {
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  outline: none;
}

.c14 .c5 .c7 {
  font-size: 1.125rem;
}

.c14 .c9 {
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 700;
  text-transform: uppercase;
}

.c15 {
  align-items: center;
  box-sizing: border-box;
  display: flex;
  flex-grow: 1;
  justify-content: flex-start;
  gap: 4px;
  min-height: 48px;
  outline: 0px;
  padding: 8px 16px;
  background: transparent;
  color: rgb(5, 104, 174);
}

.c15::before {
  content: "";
  inset: 0px;
  position: absolute;
  display: block;
}

.c15 .c7 {
  user-select: none;
}

.c15:focus::before {
  border: 2px solid rgb(213, 0, 117);
  margin: 1px;
  outline: rgb(51, 51, 51) dotted 1px;
}

.c15:not(:disabled):focus {
  outline: rgb(51, 51, 51) dotted 1px;
  background-color: transparent;
  box-shadow: none;
  color: rgb(213, 0, 117);
  border: 2px solid rgb(213, 0, 117);
}

.c15:not(:disabled):hover,
.c15:not(:disabled):active,
.c15:not(:disabled):focus {
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  outline: none;
}

.c15 .c5 .c7 {
  font-size: 1.125rem;
}

.c15 .c9 {
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 700;
  text-transform: uppercase;
}

.c16 {
  align-items: center;
  box-sizing: border-box;
  display: flex;
  flex-grow: 1;
  justify-content: flex-start;
  gap: 4px;
  min-height: 48px;
  outline: 0px;
  padding: 8px 16px;
  background: transparent;
  border-color: transparent;
  box-shadow: none;
  color: rgb(169, 179, 188);
  cursor: default;
}

.c16::before {
  content: "";
  inset: 0px;
  position: absolute;
  display: block;
}

.c16 .c7 {
  user-select: none;
}

.c16:focus::before {
  outline: rgb(51, 51, 51) dotted 1px;
}

.c16:not(:disabled):hover,
.c16:not(:disabled):active,
.c16:not(:disabled):focus {
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  outline: none;
}

.c16 .c5 .c7 {
  font-size: 1.125rem;
}

.c16 .c9 {
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 700;
  text-transform: uppercase;
}

.c17 {
  align-items: center;
  box-sizing: border-box;
  display: flex;
  flex-grow: 1;
  justify-content: flex-start;
  gap: 4px;
  min-height: 48px;
  outline: 0px;
  padding: 8px 16px;
  background: transparent;
  color: rgb(181, 76, 23);
}

.c17::before {
  content: "";
  inset: 0px;
  position: absolute;
  display: block;
}

.c17 .c7 {
  user-select: none;
}

.c17:focus::before {
  border: 2px solid rgb(213, 0, 117);
  margin: 1px;
  outline: rgb(51, 51, 51) dotted 1px;
}

.c17:not(:disabled):focus {
  outline: rgb(51, 51, 51) dotted 1px;
  background-color: rgb(255, 255, 255);
  box-shadow: none;
  color: rgb(213, 0, 117);
  text-decoration: none;
  border: 2px solid rgb(213, 0, 117);
}

.c17:not(:disabled):focus {
  background-color: rgb(255, 255, 255);
  box-shadow: none;
  color: rgb(213, 0, 117);
  text-decoration: none;
  border: 2px solid rgb(213, 0, 117);
}

.c17:not(:disabled):hover,
.c17:not(:disabled):active,
.c17:not(:disabled):focus {
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  outline: none;
}

.c17 .c5 .c7 {
  font-size: 1.125rem;
}

.c17 .c9 {
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 700;
  text-transform: uppercase;
}

.c18 {
  align-items: center;
  box-sizing: border-box;
  display: flex;
  flex-grow: 1;
  justify-content: flex-start;
  gap: 4px;
  min-height: 48px;
  outline: 0px;
  padding: 8px 16px;
  background: transparent;
  color: rgb(201, 29, 29);
}

.c18::before {
  content: "";
  inset: 0px;
  position: absolute;
  display: block;
}

.c18 .c7 {
  user-select: none;
}

.c18:focus::before {
  border: 2px solid rgb(213, 0, 117);
  margin: 1px;
  outline: rgb(51, 51, 51) dotted 1px;
}

.c18:not(:disabled):focus {
  outline: rgb(51, 51, 51) dotted 1px;
  background-color: rgb(255, 255, 255);
  box-shadow: none;
  color: rgb(213, 0, 117);
  text-decoration: none;
  border: 2px solid rgb(213, 0, 117);
}

.c18:not(:disabled):focus {
  background-color: rgb(255, 255, 255);
  box-shadow: none;
  color: rgb(213, 0, 117);
  text-decoration: none;
  border: 2px solid rgb(213, 0, 117);
}

.c18:not(:disabled):hover,
.c18:not(:disabled):active,
.c18:not(:disabled):focus {
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  outline: none;
}

.c18 .c5 .c7 {
  font-size: 1.125rem;
}

.c18 .c9 {
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 700;
  text-transform: uppercase;
}

.c19 {
  align-items: center;
  box-sizing: border-box;
  display: flex;
  flex-grow: 1;
  justify-content: flex-start;
  gap: 4px;
  min-height: 48px;
  outline: 0px;
  padding: 8px 16px;
  background: transparent;
  color: rgb(5, 104, 174);
}

.c19::before {
  content: "";
  inset: 0px;
  position: absolute;
  display: block;
}

.c19 .c7 {
  user-select: none;
}

.c19:focus::before {
  border: 2px solid rgb(213, 0, 117);
  margin: 1px;
  outline: rgb(51, 51, 51) dotted 1px;
}

.c19:not(:disabled):focus {
  outline: rgb(51, 51, 51) dotted 1px;
  background-color: rgb(255, 255, 255);
  box-shadow: none;
  color: rgb(213, 0, 117);
  text-decoration: none;
  border: 2px solid rgb(213, 0, 117);
}

.c19:not(:disabled):hover,
.c19:not(:disabled):active,
.c19:not(:disabled):focus {
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  outline: none;
}

.c19 .c5 .c7 {
  font-size: 1.125rem;
}

.c19 .c9 {
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 700;
  text-transform: uppercase;
}

.c20 {
  align-items: center;
  box-sizing: border-box;
  display: flex;
  flex-grow: 1;
  justify-content: flex-start;
  gap: 4px;
  min-height: 48px;
  outline: 0px;
  padding: 8px 16px;
  background: rgb(226, 230, 233);
  box-shadow: none;
  color: rgb(169, 179, 188);
  cursor: default;
}

.c20::before {
  content: "";
  inset: 0px;
  position: absolute;
  display: block;
}

.c20 .c7 {
  user-select: none;
}

.c20:focus::before {
  outline: rgb(51, 51, 51) dotted 1px;
}

.c20:not(:disabled):hover,
.c20:not(:disabled):active,
.c20:not(:disabled):focus {
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  outline: none;
}

.c20 .c5 .c7 {
  font-size: 1.125rem;
}

.c20 .c9 {
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 700;
  text-transform: uppercase;
}

.c21 {
  align-items: center;
  box-sizing: border-box;
  display: flex;
  flex-grow: 1;
  justify-content: flex-start;
  gap: 4px;
  min-height: 48px;
  outline: 0px;
  padding: 8px 16px;
  background: rgb(181, 76, 23);
  color: rgb(255, 255, 255);
}

.c21::before {
  content: "";
  inset: 0px;
  position: absolute;
  display: block;
}

.c21 .c7 {
  user-select: none;
}

.c21:focus::before {
  border: 2px solid rgb(213, 0, 117);
  margin: 1px;
  outline: rgb(51, 51, 51) dotted 1px;
}

.c21:not(:disabled):focus {
  outline: rgb(51, 51, 51) dotted 1px;
  background-color: rgb(255, 255, 255);
  box-shadow: none;
  color: rgb(213, 0, 117);
  text-decoration: none;
  border: 2px solid rgb(213, 0, 117);
}

.c21:not(:disabled):focus {
  background-color: rgb(255, 255, 255);
  box-shadow: none;
  color: rgb(213, 0, 117);
  text-decoration: none;
  border: 2px solid rgb(213, 0, 117);
}

.c21:not(:disabled):hover,
.c21:not(:disabled):active,
.c21:not(:disabled):focus {
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  outline: none;
}

.c21 .c5 .c7 {
  font-size: 1.125rem;
}

.c21 .c9 {
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 700;
  text-transform: uppercase;
}

.c22 {
  align-items: center;
  box-sizing: border-box;
  display: flex;
  flex-grow: 1;
  justify-content: flex-start;
  gap: 4px;
  min-height: 48px;
  outline: 0px;
  padding: 8px 16px;
  background: rgb(201, 29, 29);
  color: rgb(255, 255, 255);
}

.c22::before {
  content: "";
  inset: 0px;
  position: absolute;
  display: block;
}

.c22 .c7 {
  user-select: none;
}

.c22:focus::before {
  border: 2px solid rgb(213, 0, 117);
  margin: 1px;
  outline: rgb(51, 51, 51) dotted 1px;
}

.c22:not(:disabled):focus {
  outline: rgb(51, 51, 51) dotted 1px;
  background-color: rgb(255, 255, 255);
  box-shadow: none;
  color: rgb(213, 0, 117);
  text-decoration: none;
  border: 2px solid rgb(213, 0, 117);
}

.c22:not(:disabled):focus {
  background-color: rgb(255, 255, 255);
  box-shadow: none;
  color: rgb(213, 0, 117);
  text-decoration: none;
  border: 2px solid rgb(213, 0, 117);
}

.c22:not(:disabled):hover,
.c22:not(:disabled):active,
.c22:not(:disabled):focus {
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  outline: none;
}

.c22 .c5 .c7 {
  font-size: 1.125rem;
}

.c22 .c9 {
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 700;
  text-transform: uppercase;
}

.c24 {
  align-items: center;
  box-sizing: border-box;
  display: flex;
  flex-grow: 1;
  justify-content: flex-start;
  gap: 4px;
  min-height: 48px;
  outline: 0px;
  padding: 8px 16px;
  background: rgb(41, 122, 36);
  color: rgb(255, 255, 255);
}

.c24::before {
  content: "";
  inset: 0px;
  position: absolute;
  display: block;
}

.c24 .c7 {
  user-select: none;
}

.c24:focus::before {
  border: 2px solid rgb(213, 0, 117);
  margin: 1px;
  outline: rgb(51, 51, 51) dotted 1px;
}

.c24:not(:disabled):focus {
  outline: rgb(51, 51, 51) dotted 1px;
  background-color: rgb(255, 255, 255);
  box-shadow: none;
  color: rgb(213, 0, 117);
  text-decoration: none;
  border: 2px solid rgb(213, 0, 117);
}

.c24:not(:disabled):hover,
.c24:not(:disabled):active,
.c24:not(:disabled):focus {
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  outline: none;
}

.c24 .c5 .c7 {
  font-size: 1.125rem;
}

.c24 .c9 {
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 700;
  text-transform: uppercase;
}

.c6 {
  align-items: center;
  color: inherit;
  display: inline-flex;
  flex-shrink: 0;
  justify-content: center;
  position: relative;
}

.c6 .c7 {
  display: inline-flex;
  font-size: 1.5rem;
  color: inherit;
}

.c6 .c7:not(.StyledVariantIconWrapper-sc-cNOyXs) {
  color: inherit;
}

.c13 {
  align-items: center;
  color: inherit;
  display: inline-flex;
  flex-shrink: 0;
  justify-content: center;
  position: relative;
}

.c13 .c7 {
  display: inline-flex;
  font-size: 1.5rem;
}

.c13 .c7:not(.StyledVariantIconWrapper-sc-cNOyXs) {
  color: inherit;
}

.c10 {
  color: inherit;
  display: flex;
  flex: 1 1 auto;
  flex-direction: column;
  font-size: 0.875rem;
  font-weight: 400;
  position: relative;
}

.c40 .c7 {
  position: relative;
}

.c40 .c7::before {
  inset: 0px;
  position: absolute;
}

.c40 .c7:focus {
  outline: none;
}

.c40 .c7:focus::before {
  content: "";
  outline: rgb(51, 51, 51) dotted 1px;
}

.c0 {
  background: rgb(255, 255, 255);
  max-width: 100%;
  min-width: 168px;
  isolation: isolate;
  outline: transparent solid 1px;
  overflow: hidden auto;
  -webkit-tap-highlight-color: transparent;
  box-shadow: rgba(22, 25, 29, 0.4) 0px 1px 2px 0px;
}

[data-role="tab-panel-sub-tab-list"] .c0.c0 {
  min-width: 52px;
}

.c41 .c7 {
  font-size: inherit;
}

.c2 {
  text-transform: uppercase;
}

@media (pointer: coarse) {
  .c12:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  }

  .c12:active::before {
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: fine) {
  .c12:hover::before {
    border: 2px solid rgb(213, 0, 117);
  }

  .c12:hover > :not([data-role="list-item-graphic"]) {
    text-decoration: none;
  }
}

@media (pointer: coarse) {
  .c12:not(:disabled):active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    background-color: transparent;
    box-shadow: none;
    color: rgb(213, 0, 117);
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: fine) {
  .c12:not(:disabled):hover {
    background-color: transparent;
    box-shadow: none;
    color: rgb(213, 0, 117);
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: coarse) {
  .c12:not(:disabled):active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    background-color: transparent;
    box-shadow: none;
    color: rgb(213, 0, 117);
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: fine) {
  .c12:not(:disabled):hover {
    background-color: transparent;
    box-shadow: none;
    color: rgb(213, 0, 117);
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: coarse) {
  .c14:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  }

  .c14:active::before {
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: fine) {
  .c14:hover::before {
    border: 2px solid rgb(213, 0, 117);
  }

  .c14:hover > :not([data-role="list-item-graphic"]) {
    text-decoration: none;
  }
}

@media (pointer: coarse) {
  .c14:not(:disabled):active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    background-color: transparent;
    box-shadow: none;
    color: rgb(213, 0, 117);
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: fine) {
  .c14:not(:disabled):hover {
    background-color: transparent;
    box-shadow: none;
    color: rgb(213, 0, 117);
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: coarse) {
  .c14:not(:disabled):active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    background-color: transparent;
    box-shadow: none;
    color: rgb(213, 0, 117);
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: fine) {
  .c14:not(:disabled):hover {
    background-color: transparent;
    box-shadow: none;
    color: rgb(213, 0, 117);
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: coarse) {
  .c15:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  }

  .c15:active::before {
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: fine) {
  .c15:hover::before {
    border: 2px solid rgb(213, 0, 117);
  }

  .c15:hover > :not([data-role="list-item-graphic"]) {
    text-decoration: none;
  }
}

@media (pointer: coarse) {
  .c15:not(:disabled):active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    background-color: transparent;
    box-shadow: none;
    color: rgb(213, 0, 117);
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: fine) {
  .c15:not(:disabled):hover {
    background-color: transparent;
    box-shadow: none;
    color: rgb(213, 0, 117);
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: coarse) {
  .c17:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  }

  .c17:active::before {
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: fine) {
  .c17:hover::before {
    border: 2px solid rgb(213, 0, 117);
  }

  .c17:hover > :not([data-role="list-item-graphic"]) {
    text-decoration: none;
  }
}

@media (pointer: coarse) {
  .c17:not(:disabled):active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    background-color: rgb(255, 255, 255);
    box-shadow: none;
    color: rgb(213, 0, 117);
    text-decoration: none;
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: fine) {
  .c17:not(:disabled):hover {
    background-color: rgb(255, 255, 255);
    box-shadow: none;
    color: rgb(213, 0, 117);
    text-decoration: none;
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: coarse) {
  .c17:not(:disabled):active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    background-color: rgb(255, 255, 255);
    box-shadow: none;
    color: rgb(213, 0, 117);
    text-decoration: none;
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: fine) {
  .c17:not(:disabled):hover {
    background-color: rgb(255, 255, 255);
    box-shadow: none;
    color: rgb(213, 0, 117);
    text-decoration: none;
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: coarse) {
  .c18:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  }

  .c18:active::before {
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: fine) {
  .c18:hover::before {
    border: 2px solid rgb(213, 0, 117);
  }

  .c18:hover > :not([data-role="list-item-graphic"]) {
    text-decoration: none;
  }
}

@media (pointer: coarse) {
  .c18:not(:disabled):active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    background-color: rgb(255, 255, 255);
    box-shadow: none;
    color: rgb(213, 0, 117);
    text-decoration: none;
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: fine) {
  .c18:not(:disabled):hover {
    background-color: rgb(255, 255, 255);
    box-shadow: none;
    color: rgb(213, 0, 117);
    text-decoration: none;
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: coarse) {
  .c18:not(:disabled):active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    background-color: rgb(255, 255, 255);
    box-shadow: none;
    color: rgb(213, 0, 117);
    text-decoration: none;
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: fine) {
  .c18:not(:disabled):hover {
    background-color: rgb(255, 255, 255);
    box-shadow: none;
    color: rgb(213, 0, 117);
    text-decoration: none;
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: coarse) {
  .c19:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  }

  .c19:active::before {
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: fine) {
  .c19:hover::before {
    border: 2px solid rgb(213, 0, 117);
  }

  .c19:hover > :not([data-role="list-item-graphic"]) {
    text-decoration: none;
  }
}

@media (pointer: coarse) {
  .c19:not(:disabled):active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    background-color: rgb(255, 255, 255);
    box-shadow: none;
    color: rgb(213, 0, 117);
    text-decoration: none;
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: fine) {
  .c19:not(:disabled):hover {
    background-color: rgb(255, 255, 255);
    box-shadow: none;
    color: rgb(213, 0, 117);
    text-decoration: none;
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: coarse) {
  .c21:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  }

  .c21:active::before {
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: fine) {
  .c21:hover::before {
    border: 2px solid rgb(213, 0, 117);
  }

  .c21:hover > :not([data-role="list-item-graphic"]) {
    text-decoration: none;
  }
}

@media (pointer: coarse) {
  .c21:not(:disabled):active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    background-color: rgb(255, 255, 255);
    box-shadow: none;
    color: rgb(213, 0, 117);
    text-decoration: none;
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: fine) {
  .c21:not(:disabled):hover {
    background-color: rgb(255, 255, 255);
    box-shadow: none;
    color: rgb(213, 0, 117);
    text-decoration: none;
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: coarse) {
  .c21:not(:disabled):active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    background-color: rgb(255, 255, 255);
    box-shadow: none;
    color: rgb(213, 0, 117);
    text-decoration: none;
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: fine) {
  .c21:not(:disabled):hover {
    background-color: rgb(255, 255, 255);
    box-shadow: none;
    color: rgb(213, 0, 117);
    text-decoration: none;
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: coarse) {
  .c22:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  }

  .c22:active::before {
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: fine) {
  .c22:hover::before {
    border: 2px solid rgb(213, 0, 117);
  }

  .c22:hover > :not([data-role="list-item-graphic"]) {
    text-decoration: none;
  }
}

@media (pointer: coarse) {
  .c22:not(:disabled):active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    background-color: rgb(255, 255, 255);
    box-shadow: none;
    color: rgb(213, 0, 117);
    text-decoration: none;
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: fine) {
  .c22:not(:disabled):hover {
    background-color: rgb(255, 255, 255);
    box-shadow: none;
    color: rgb(213, 0, 117);
    text-decoration: none;
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: coarse) {
  .c22:not(:disabled):active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    background-color: rgb(255, 255, 255);
    box-shadow: none;
    color: rgb(213, 0, 117);
    text-decoration: none;
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: fine) {
  .c22:not(:disabled):hover {
    background-color: rgb(255, 255, 255);
    box-shadow: none;
    color: rgb(213, 0, 117);
    text-decoration: none;
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: coarse) {
  .c24:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  }

  .c24:active::before {
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: fine) {
  .c24:hover::before {
    border: 2px solid rgb(213, 0, 117);
  }

  .c24:hover > :not([data-role="list-item-graphic"]) {
    text-decoration: none;
  }
}

@media (pointer: coarse) {
  .c24:not(:disabled):active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    background-color: rgb(255, 255, 255);
    box-shadow: none;
    color: rgb(213, 0, 117);
    text-decoration: none;
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: fine) {
  .c24:not(:disabled):hover {
    background-color: rgb(255, 255, 255);
    box-shadow: none;
    color: rgb(213, 0, 117);
    text-decoration: none;
    border: 2px solid rgb(213, 0, 117);
  }
}

<div
  class="c0 popup-menu"
  data-role="popup-menu"
  tabindex="0"
>
  <ul
    class="c1 list c2"
    data-role="list"
  >
    <li
      class="c3 list-item list-item--disabled list-item--non-interactive"
      data-role="list-item"
      id="icon-disabled"
    >
      <div
        aria-disabled="true"
        class="c4 list-item__content"
        data-role="list-item-content"
        role="button"
        title="Disabled"
      >
        <div
          aria-hidden="true"
          class="c5 c6"
          data-role="list-item-graphic"
        >
          <i
            class="c7 c8 plasma-icon"
            data-role="plasma-icon"
          >
            <span
              aria-hidden="true"
            >
              block
            </span>
          </i>
        </div>
        <div
          class="c9 c10 list-item__text"
          data-role="list-item-text"
        >
          Disabled
        </div>
      </div>
    </li>
    <li
      class="c11 list-item list-item--active"
      data-role="list-item"
      id="icon-active"
    >
      <div
        aria-disabled="false"
        class="c12 list-item__content"
        data-role="list-item-content"
        role="button"
        tabindex="0"
        title="Active"
      >
        <div
          aria-hidden="true"
          class="c5 c13"
          data-role="list-item-graphic"
        >
          <i
            class="c7 c8 plasma-icon"
            data-role="plasma-icon"
          >
            <span
              aria-hidden="true"
            >
              bookmark
            </span>
          </i>
        </div>
        <div
          class="c9 c10 list-item__text"
          data-role="list-item-text"
        >
          Active
        </div>
      </div>
    </li>
    <li
      class="c11 list-item"
      data-role="list-item"
      id="icon-destructive"
    >
      <div
        aria-disabled="false"
        class="c14 list-item__content"
        data-role="list-item-content"
        role="button"
        tabindex="0"
        title="Destructive"
      >
        <div
          aria-hidden="true"
          class="c5 c13"
          data-role="list-item-graphic"
        >
          <i
            class="c7 c8 plasma-icon"
            data-role="plasma-icon"
          >
            <span
              aria-hidden="true"
            >
              delete
            </span>
          </i>
        </div>
        <div
          class="c9 c10 list-item__text"
          data-role="list-item-text"
        >
          Destructive
        </div>
      </div>
    </li>
    <li
      class="c11 list-item"
      data-role="list-item"
      id="icon-default"
    >
      <div
        aria-disabled="false"
        class="c15 list-item__content"
        data-role="list-item-content"
        role="button"
        tabindex="0"
        title="Default"
      >
        <div
          aria-hidden="true"
          class="c5 c13"
          data-role="list-item-graphic"
        >
          <i
            class="c7 c8 plasma-icon"
            data-role="plasma-icon"
          >
            <span
              aria-hidden="true"
            >
              home
            </span>
          </i>
        </div>
        <div
          class="c9 c10 list-item__text"
          data-role="list-item-text"
        >
          Default
        </div>
      </div>
    </li>
    <li
      class="c3 list-item list-item--disabled list-item--non-interactive"
      data-role="list-item"
      id="text-secondary-disabled"
    >
      <div
        aria-disabled="true"
        class="c16 list-item__content"
        data-role="list-item-content"
        role="button"
      >
        <div
          class="c9 c10 list-item__text"
          data-role="list-item-text"
        >
          Disabled
        </div>
      </div>
    </li>
    <li
      class="c11 list-item list-item--active"
      data-role="list-item"
      id="text-secondary-active"
    >
      <div
        aria-disabled="false"
        class="c17 list-item__content"
        data-role="list-item-content"
        role="button"
        tabindex="0"
      >
        <div
          class="c9 c10 list-item__text"
          data-role="list-item-text"
        >
          Active
        </div>
      </div>
    </li>
    <li
      class="c11 list-item"
      data-role="list-item"
      id="text-secondary-destructive"
    >
      <div
        aria-disabled="false"
        class="c18 list-item__content"
        data-role="list-item-content"
        role="button"
        tabindex="0"
      >
        <div
          class="c9 c10 list-item__text"
          data-role="list-item-text"
        >
          Destructive
        </div>
      </div>
    </li>
    <li
      class="c11 list-item"
      data-role="list-item"
      id="text-secondary"
    >
      <div
        aria-disabled="false"
        class="c19 list-item__content"
        data-role="list-item-content"
        role="button"
        tabindex="0"
      >
        <div
          class="c9 c10 list-item__text"
          data-role="list-item-text"
        >
          Default
        </div>
      </div>
    </li>
    <li
      class="c3 list-item list-item--disabled list-item--non-interactive"
      data-role="list-item"
      id="text-primary-disabled"
    >
      <div
        aria-disabled="true"
        class="c20 list-item__content"
        data-role="list-item-content"
        role="button"
      >
        <div
          class="c9 c10 list-item__text"
          data-role="list-item-text"
        >
          Disabled
        </div>
      </div>
    </li>
    <li
      class="c11 list-item list-item--active"
      data-role="list-item"
      id="text-primary-active"
    >
      <div
        aria-disabled="false"
        class="c21 list-item__content"
        data-role="list-item-content"
        role="button"
        tabindex="0"
      >
        <div
          class="c9 c10 list-item__text"
          data-role="list-item-text"
        >
          Active
        </div>
      </div>
    </li>
    <li
      class="c11 list-item"
      data-role="list-item"
      id="text-primary-destructive"
    >
      <div
        aria-disabled="false"
        class="c22 list-item__content"
        data-role="list-item-content"
        role="button"
        tabindex="0"
      >
        <div
          class="c9 c10 list-item__text"
          data-role="list-item-text"
        >
          Destructive
        </div>
      </div>
    </li>
    <li
      class="c23 list-item"
      data-role="list-item"
      id="text-primary"
    >
      <div
        aria-disabled="false"
        class="c24 list-item__content"
        data-role="list-item-content"
        role="button"
        tabindex="0"
      >
        <div
          class="c9 c10 list-item__text"
          data-role="list-item-text"
        >
          Default
        </div>
      </div>
    </li>
    <li
      class="c11 list-item"
      data-role="list-item"
      id="qa-secondary-1"
    >
      <div
        aria-disabled="false"
        class="c24 list-item__content"
        data-role="list-item-content"
        role="button"
        tabindex="0"
      >
        <div
          class="c9 c10 list-item__text"
          data-role="list-item-text"
        >
          Save
        </div>
      </div>
    </li>
    <li
      class="c23 list-item"
      data-role="list-item"
      id="qa-secondary-2"
    >
      <div
        aria-disabled="false"
        class="c24 list-item__content"
        data-role="list-item-content"
        role="button"
        tabindex="0"
      >
        <div
          class="c9 c10 list-item__text"
          data-role="list-item-text"
        >
          Save and Close
        </div>
      </div>
    </li>
    <li
      class="c11 list-item"
      data-role="list-item"
      id="qa-primary-1"
    >
      <div
        aria-disabled="false"
        class="c22 list-item__content"
        data-role="list-item-content"
        role="button"
        tabindex="0"
      >
        <div
          class="c9 c10 list-item__text"
          data-role="list-item-text"
        >
          Save
        </div>
      </div>
    </li>
    <li
      class="c11 list-item"
      data-role="list-item"
      id="qa-primary-2"
    >
      <div
        aria-disabled="false"
        class="c22 list-item__content"
        data-role="list-item-content"
        role="button"
        tabindex="0"
      >
        <div
          class="c9 c10 list-item__text"
          data-role="list-item-text"
        >
          Save and Close
        </div>
      </div>
    </li>
  </ul>
</div>
`;
